src/test/ui/error-codes/E0060.stderr
error[E0308]: arguments to this function are incorrect
  --> $DIR/E0060.rs:6:14
   |
LL |     unsafe { printf(); }
   |              ^^^^^^^^ an argument of type *const u8 is missing
   |
note: function defined here
  --> $DIR/E0060.rs:2:8
   |
LL |     fn printf(_: *const u8, ...) -> u32;
   |        ^^^^^^
help: provide the argument
   |
LL |     unsafe { printf({*const u8}); }
   |              ^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
